# space_hulk_game

./: .clinerules  .clinerules-architect  .clinerules-ask  .clinerules-code  .clinerules-debug  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  API_VALIDATION.md  ARCHITECTURAL_ANALYSIS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DOCKER_SETUP.md  KLOC_REPORT_INSTRUCTIONS.md  KLOC_REPORT_OUTPUT_EXAMPLE.md  LINTER_FIX_PLAN.md  Makefile  NODE_UPGRADE.md  README.md  REVISED_RESTART_PLAN.md  SETUP.md  SETUP_IMPLEMENTATION.md  SUMMARY.md  TASK_3.3b_IMPLEMENTATION_SUMMARY.md  activate.ps1  activate.sh  configure_mem0.py  crew_sequential.py  docker-compose.prod.yml  docker-compose.yml  kloc-report.py  kloc_by_repo.csv  kloc_by_repo_with_space_hulk.csv  kloc_files.csv  (+20 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
.github/: COPILOT_QUICKSTART.md  INITIALIZATION_SUMMARY.md  PRE_CHECKIN.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  markdown-lint-check-config.json
.github/agents/: crewai-specialist.md  game-mechanics-specialist.md  principal-engineer.md  product-designer.md  python-developer.md  space-hulk-game-assistant.md  testing-specialist.md  yaml-expert.md
.github/copilot/: README.md  agent.yml  crewai-agent.yml  game-mechanics-agent.yml  python-agent.yml  testing-agent.yml  yaml-agent.yml
.github/workflows/: README.md  backend-ci.yml  ci.yml  docker-build.yml  frontend-ci.yml  nightly-regression.yml  pr-validation.yml  run-crewai-agents.yml  run-kloc-report.yml  update-docs.yml
agent-projects/: ARCHITECTURAL_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_IMPLEMENTATION.md  activeContext.md  decisionLog.md  productContext.md
agent-projects/python-template-adoption/: README.md  evaluation-report.md  parallel-execution-plan.md  plan.md  task-breakdown.md
agent-projects/restart-project/: AGENT_WORK_TEMPLATE.md  ASSIGNMENT_GUIDE.md  QUICK_START.md  README.md  crewai_improvements.md  master_implementation_plan.md  phase1_implementation_plan.md  progress.md  status_assessment.md
agent-projects/web-interface-design/: API_SPECIFICATION.md  ARCHITECTURAL_DESIGN.md  ARCHITECTURE_WEB_INTERFACE.md  CONSOLIDATION_SUMMARY.md  GLOSSARY.md  IMPLEMENTATION_GUIDE_WEB_INTERFACE.md  IMPLEMENTATION_PLAN.md  PHASE_1_AGENT_PROMPTS.md  PHASE_1_GAP_ANALYSIS.md  PHASE_2_AGENT_PROMPTS.md  PHASE_2_FINAL_REPORT.md  PHASE_2_GAP_ANALYSIS.md  PHASE_3_AGENT_PROMPTS.md  PHASE_4_AGENT_PROMPTS.md  PHASE_5_AGENT_PROMPTS.md  PRD_WEB_INTERFACE.md  README.md  REMEDIATION_PLAN.md  SUMMARY.md  TASK_3.3b_CREWAI_INTEGRATION.md  THEMING_SYSTEM.md  USER_JOURNEYS_DIAGRAMS.md  WEB_INTERFACE_OVERVIEW.md
agent-projects/yaml-pipeline-refactor/: COMPLETE.md  phase2-plan.md  plan.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  celery_app.py  config.py  database.py  main.py
backend/tests/: __init__.py  conftest.py  test_celery.py  test_celery_integration.py  test_config.py  test_crewai_wrapper.py  test_generation_api.py  test_generation_service.py  test_generation_tasks_integration.py  test_health.py  (+10 more)
context_portal/: context.db
docs/: AGENTS.md  API_TEST_RESULTS.md  API_VALIDATION.md  ARCHITECTURE_WEB_INTERFACE.md  CONTRIBUTING.md  CORRECTOR_README.md  CREWAI_AGENTS.md  DEBUGGING_GUIDE.md  GAME_ENGINE.md  HIERARCHICAL_MODE_ASSESSMENT.md  HIERARCHICAL_MODE_INVESTIGATION.md  KLOC_REPORT_INSTRUCTIONS.md  KLOC_SCRIPT_FIX.md  MEM0_QUICK_REFERENCE.md  MEM0_SETUP_GUIDE.md  PLANNING_TEMPLATES.md  PLAYING_GAMES.md  PRD_WEB_INTERFACE.md  QUALITY_CHECKING.md  QUALITY_METRICS.md  QUICKSTART.md  README.md  SECRETS_SETUP.md  SETUP.md  WEB_INTERFACE_OVERVIEW.md  WORKFLOWS.md  crewai-api-reference.md
examples/: corrector_usage.py
frontend/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vitest.config.ts
game-config/: README.md  narrative_map.json  narrative_map.yaml  playable_game.json  playable_game_test.json  plot_outline.json  plot_outline.yaml  prd_document.json  prd_document.yaml  puzzle_design.json  puzzle_design.yaml  scene_texts.json  scene_texts.yaml
memory-bank/: activeContext.md  crewai-api-reference.md  decisionLog.md  progress.md  space_hulk_system_improvements.md
planning_templates/: combat_focused.yaml  mystery_investigation.yaml  space_horror.yaml  survival_escape.yaml
project-plans/: AGENT_MIGRATION.md  CREWAI_IMPROVEMENTS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_RESTART_PLAN.md  README.md  REPOSITORY_REORGANIZATION.md  RESTART_SUMMARY.md  YAML_TO_JSON_MIGRATION.md  activeContext.md  agent_task_review.md  game-engineer-implementation-complete.md  phase1_implementation_plan.md  phase2_implementation_plan.md  productContext.md  progress.md  validation-failure-analysis.md
tests/: README.md  conftest.py  crew_generation_script.py  crew_init_script.py  demo_content_loader.py  diagnose_hierarchical.py  run_chunk_01.py  run_chunk_02.py  run_chunk_03.py  test_api_validation.py  test_command_parser.py  test_content_loader.py  test_corrector.py  test_crew_improvements.py  test_demo_game.py  test_demo_game_validation.py  test_game_engine.py  test_game_state_model.py  test_game_validator.py  test_hierarchical_gemini.py  test_hierarchical_minimal.py  test_hierarchical_optimized.py  test_hierarchical_simplified.py  test_integration_sequential.py  test_kloc_report.py  test_kloc_workflow.py  test_output_sanitization.py  test_planning_templates.py  test_product_designer_agent.py  test_quality_evaluators.py  test_quality_integration.py  test_quality_metrics.py  test_retry_logic.py  test_schemas_game_mechanics.py  test_schemas_narrative_map.py  test_schemas_plot_outline.py  test_schemas_puzzle_design.py  test_schemas_puzzle_design.py.skip  test_schemas_scene_text.py  test_sequential_5_tasks.py  (+5 more)
tools/: README.md  build_context.py  configure_mem0.py  fix_test_encoding.py  kloc-report.py  test_connectivity.py  validate_api.py
(+244 files in other folders)
