[project]
name = "space_hulk_game"
version = "0.1.0"
description = "A text-based adventure game set in the Warhammer 40K universe using crewAI multi-agent framework"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
keywords = ["crewai", "warhammer-40k", "text-adventure", "ai-agents", "game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "mem0ai>=0.1.0",
    "pyyaml>=6.0",
    "litellm>=1.0.0",
    "colorama>=0.4.6",
    "pydantic>=2.11.9,<3.0.0",
]

[project.optional-dependencies]
# Web Backend Dependencies (for browser-based interface)
web-backend = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
]

dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "httpx>=0.25.0",  # For testing FastAPI apps

    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "yamllint>=1.33.0",
    "pre-commit>=3.0.0",

    # Type Stubs
    "types-pyyaml>=6.0.0",

    # Advanced Testing
    "hypothesis>=6.0.0",
    "faker>=20.0.0",

    # Development Tools
    "ipython>=8.0.0",
    "ipdb>=0.13.0",

    # Documentation (for future)
    "pdoc3>=0.10.0",
]

[project.scripts]
space_hulk_game = "space_hulk_game.main:run"
run_crew = "space_hulk_game.main:run"
train = "space_hulk_game.main:train"
replay = "space_hulk_game.main:replay"
test = "space_hulk_game.main:test"
demo_game = "space_hulk_game.demo_game:main"
play_game = "space_hulk_game.demo_game:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/space_hulk_game"]

[tool.hatchling.build.targets.wheel.force-include]
"src/space_hulk_game/py.typed" = "space_hulk_game/py.typed"

[tool.crewai]
type = "crew"

[tool.pyright]
include = ["src", "tests", "tools"]  # Added tools
exclude = [
    "venv",
    ".venv",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/node_modules",
    ".git",
    "tmp",
    "agent-tmp"  # Added
]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
stubPath = "typings"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
namespace_packages = false
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "tmp",
    "agent-tmp",
    "backend/tests",
]

# Ignore missing imports for specific third-party libraries without type stubs
[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "mem0.*",
    "litellm.*",
]
ignore_missing_imports = true

# Lower bar for tests and tools directories
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "tools.*",
]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "tmp",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate (commented-out code)
    "PL",  # pylint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0911", # too many return statements
    "PLR0915", # too many statements
    "PLR2004", # magic value comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py files
"tests/**/*.py" = [
    "S101",    # asserts are standard in tests
    "S105",    # hardcoded passwords in test fixtures are OK
    "B017",    # assertRaises(Exception) is fine for testing error cases
    "ARG001",  # unused args needed for mock/patch signatures
    "E402",    # module imports after code sometimes needed for test setup
    "PTH",     # pathlib not required for test code
    "PLC0415", # imports inside functions are common in tests (lazy loading, mocking)
    "ERA001",  # commented code for debugging/documentation is OK in tests
]
"tools/**/*.py" = [
    "ARG002",  # unused method args in tools are often for interface compatibility
    "PTH",     # pathlib not required for utility tools
    "PLC0415", # imports inside functions are fine for utility scripts
]
"context_portal/**/*.py" = ["ALL"]  # External code, exclude from linting

[tool.bandit]
exclude_dirs = [
    ".venv",
    "venv",
    "tests",
    "tmp",
]
skips = [
    "B101",  # assert_used - we use asserts in tests
    "B601",  # paramiko_calls - if we use paramiko
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
exclude = '''
/(
    \.venv
  | venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
  | tmp
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "real_api: marks tests requiring real API access",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
